--- a/css/homepage.css
+++ b/css/homepage.css
@@ -80,6 +80,7 @@
   border-radius: 6px;
   width: 50%;
   text-align: center;
+  color: var(--primary-text-color);
 }
 
 /* 3 CARD SECTION */
