--- a/css/main.css
+++ b/css/main.css
@@ -92,11 +92,6 @@ header .header-nav {
   display: none;
 }
 
-/* Universal text in inputs color */
-input {
-  color: var(--primary-text-color);
-}
-
 /* FOOTER SECTION */
 footer {
   background-color: var(--accent-backdrop);
@@ -106,6 +101,8 @@ footer {
 footer input {
   margin: 0.2rem;
   width: 80%;
+  color: var(--primary-text-color);
+  padding-left: 2px;
 }
 footer button {
   background-color: var(--accent-color);
